# compiler

./: CMakeLists.txt  README.md  grammar_test.txt  lexer_test.txt  semantics_test.txt  stmt_test.txt
header/: errno.h  gen.h  global.h  hashtable.h  lexer.h  logger.h  parser.h
src/: gen.c  hashtable.c  lexer.c  logger.c  main.c  parser.c
